# sphinxcontrib-del-marker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/source/: conf.py  index.rst
src/sphinxcontrib_del_marker/: del_marker.py
