[project]
name = "sphinxcontrib-del-marker"
version = "0.1.0"
description = "A sphinx plugin that enables embedding of HTML5 del"
authors = [
    {name = "jennier0107", email = "mt3085570450@outlook.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
